--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.sql.init.platform=mysql
 spring.jpa.hibernate.ddl-auto=create
+spring.main.allow-circular-references=true
